making it better

--- a/index.html
+++ b/index.html
@@ -21,7 +21,10 @@
         </nav>
     </header>
     <img src="assets/martin-inn-greetings-grabowski.webp" alt="" id="bigImage">
-    <p id="imgCredit">Ballroom of the Martin Inn, Ocean Falls, BC. <span class="credit">Image credit: Christopher Grabowski</span></p>
+    <div id="imgsorce">
+        <p id="imgCredit">Ballroom of the Martin Inn, Ocean Falls, BC.</p>
+        <p class="credit">Image credit: Christopher Grabowski</p>
+    </div>
     <div id="content">
         <p>
             Laura Nicol is a writer of fiction and non-fiction whose work has appeared in <span class="credit">The Malahat Review, Existere, The Globe and Mail</span> and been shortlisted for the Writers’ Union of Canada Short Prose Competition (2013). She was the 2017 recipient of the Brenda Strathern Writing Prize and the University of Victoria’s 50th Anniversary Prize in Fiction in 2012. In 2017, she completed an MFA in creative writing through the University of British Columbia. Born in Toronto and raised in BC, she now lives in Calgary.
