added more content

--- a/index.html
+++ b/index.html
@@ -26,9 +26,12 @@
         <p class="credit">Image credit: Christopher Grabowski</p>
     </div>
     <div id="content">
-        <p>
-            Laura Nicol is a writer of fiction and non-fiction whose work has appeared in <span class="credit">The Malahat Review, Existere, The Globe and Mail</span> and been shortlisted for the Writers’ Union of Canada Short Prose Competition (2013). She was the 2017 recipient of the Brenda Strathern Writing Prize and the University of Victoria’s 50th Anniversary Prize in Fiction in 2012. In 2017, she completed an MFA in creative writing through the University of British Columbia. Born in Toronto and raised in BC, she now lives in Calgary.
-        </p>
+        <div id="contenttext">
+            <p>
+                Laura Nicol is a writer of fiction and non-fiction whose work has appeared in <span class="credit">The Malahat Review, Existere, The Globe and Mail</span> and been shortlisted for the Writers’ Union of Canada Short Prose Competition (2013). She was the 2017 recipient of the Brenda Strathern Writing Prize and the University of Victoria’s 50th Anniversary Prize in Fiction in 2012. In 2017, she completed an MFA in creative writing through the University of British Columbia. Born in Toronto and raised in BC, she now lives in Calgary.
+            </p>
+            <p>Laura is represented by Stacey Kondla of The Rights Factory.</p>
+        </div>
         <img src="assets/fb-profile-ubc-selfie.webp" alt="" width="400px" height="400px">
     </div>
    </main>
