--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
         <h1>Laura Nicol</h1>
         <p id="subtext">writer</p>
         <nav>
-            <button><img src="" alt="" id="aboutButton"></button>
-            <button><img src="" alt="" id="moreButton"></button>
+            <button>About</button>
+            <button>More</button>
         </nav>
     </header>
     <img src="assets/martin-inn-greetings-grabowski.webp" alt="" id="bigImage">
