--- a/index.html
+++ b/index.html
@@ -13,8 +13,10 @@
   <body>
    <main>
     <header>
-        <h1>Laura Nicol</h1>
-        <p id="subtext">writer</p>
+        <div id="title">
+            <h1>Laura Nicol</h1>
+            <p id="subtext">writer</p>
+        </div>
         <nav>
             <button>About</button>
             <button>More</button>
