--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
             <p id="subtext">writer</p>
         </div>
         <nav>
-            <button>About</button>
-            <button>More</button>
+            <button id="link1" href="index.html">About</button>
+            <button id="link2" href="more.html">More</button>
         </nav>
     </header>
     <img src="assets/martin-inn-greetings-grabowski.webp" alt="" id="bigImage">
