--- a/more.html
+++ b/more.html
@@ -3,6 +3,6 @@
     <p id="subtext">writer</p>
 </div>
 <nav>
-    <button id="link1" href="index.html">About</button>
-    <button id="link2" href="more.html">More</button>
+    <a id="link1" href="index.html">About</a>
+    <a id="link2" href="more.html">More</a>
 </nav>
