--- a/more.html
+++ b/more.html
@@ -1,8 +1,23 @@
-<div id="title">
-    <h1>Laura Nicol</h1>
-    <p id="subtext">writer</p>
-</div>
-<nav>
-    <a id="link1" href="index.html">About</a>
-    <a id="link2" href="more.html">More</a>
-</nav>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+      <meta charset="utf-8">
+      <title>Laura Nicol</title>
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <meta http-equiv="X-UA-Compatible" content="ie=edge">
+      <link rel="stylesheet" href="styles.css">
+      <link rel="preconnect" href="https://fonts.googleapis.com">
+      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+      <link href="https://fonts.googleapis.com/css2?family=Gideon+Roman&display=swap" rel="stylesheet">
+  </head>
+  <body>
+   <main>
+    <header>
+        <div id="title">
+            <h1>Laura Nicol</h1>
+            <p id="subtext">writer</p>
+        </div>
+        <nav>
+            <a id="link1" href="index.html">About</a>
+            <a id="link2" href="more.html">More</a>
+        </nav>
