--- a/more.html
+++ b/more.html
@@ -11,7 +11,6 @@
       <link href="https://fonts.googleapis.com/css2?family=Gideon+Roman&display=swap" rel="stylesheet">
   </head>
   <body>
-   <main>
     <header>
         <div id="title">
             <h1>Laura Nicol</h1>
@@ -21,3 +20,11 @@
             <a id="link1" href="index.html">About</a>
             <a id="link2" href="more.html">More</a>
         </nav>
+    </header>
+   <main id="moremain">
+
+        <h2>Selected Publications</h2>
+        <h3>Fictionbhjh</h3>
+   </main>
+   <script src="script.js"></script>
+  </body>
